<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="fragment_title">钱包</string>
    <string name="balance">余额</string>
    <string name="recharge">充值</string>
    <string name="coin_type">币种</string>
    <string name="withdrawal">提现</string>
    <string name="recommend">推荐</string>
    <string name="song_tip">送5%</string>
    <string name="add_song_tip">加送1%</string>
    <string name="recharge_lk">立刻充值</string>
    <string name="crypto_coin">加密货币</string>
    <string name="fiat_coin">法币</string>
    <string name="next_step">下一步</string>
    <string name="str_more">更多</string>
    <string name="tv_address">地址</string>
    <string name="search">搜索</string>
    <string name="remark">备注</string>
    <string name="manager">管理</string>
    <string name="sel_coin">选择币种</string>
    <string name="sel_address">选择地址</string>
    <string name="add_to_note">添加到地址本</string>
    <string name="copy_address">复制地址</string>
    <string name="tip_copy_suc">复制成功</string>
    <string name="tz_detail">投注额详情</string>
    <string name="money_detail">资金明细</string>
    <string name="recharge_lesson">充值教程</string>
    <string name="withdraw_lesson">提现教程</string>
    <string name="cus_service">联系客服</string>
    <string name="add_bank">添加银行卡</string>
    <string name="address_note">地址本</string>
    <string name="bet_detail">投注额详情</string>
    <string name="select_bank">选择所属银行</string>
    <string name="pay_custom">自定义</string>
    <string name="bet_pay_bank">充值-银行卡支付</string>
    <string name="bet_pay_alipay">充值-支付宝充值</string>
    <string name="bet_pay_wechat">充值-微信充值</string>
    <string name="tip_bet_detail">你还需投注 %s 即可提现所有余额</string>
    <string name="select_method">选择支付方式</string>
    <string name="select_tx_method">选择提现方式</string>
    <string name="current_balance">当前余额: ￥1,100.00</string>
    <string name="recharge_record">充值记录</string>
    <string name="order_detail">查看订单</string>
    <string name="order_cancel">取消订单</string>
    <string name="add_tx_card">添加提现银行卡</string>
    <string name="withdrawal_record">提现记录</string>
    <string name="withdrawal_detail">提现详情</string>
    <string name="recharge_detail">充值详情</string>
    <string name="tip_input_bank">请输入银行名称</string>
    <string name="bank_card">我的银行卡</string>
    <string name="pay_ali">支付宝充值</string>
    <string name="pay_wechat">微信充值</string>
    <string name="pay_ee">EE钱包充值</string>
    <string name="pay_bank">银行卡充值</string>
    <string name="pay_rmb">数字人民币</string>
    <string name="pay_yun">云闪付充值</string>
    <string name="bank_edit">编辑</string>
    <string name="bank_cancel">取消</string>
    <string name="bank_finish">完成</string>
    <string name="bank_name">姓名</string>
    <string name="bank_shu">所属银行</string>
    <string name="bank_number">银行卡号</string>
    <string name="bank_del">确定删除</string>
    <string name="edit_addr">编辑地址</string>
    <string name="save_addr">保存</string>
    <string name="mark_hint">选填</string>
    <string name="delete">删除</string>
    <string name="submit_order">提交订单</string>
    <string name="order_iid">订单编号</string>
    <string name="wait_pay">待您付款</string>
    <string name="pay_money">充值金额</string>
    <string name="order_finish">订单完成</string>
    <string name="bank_del_tip">确定删除银行卡？</string>
    <string name="add_bank_tip">*持卡人信息确认后无法修改，请使用本人信息</string>
    <string name="cz_address">充值地址</string>
    <string name="cz_network">网络</string>
    <string name="bank_hint">输入持卡人姓名</string>
    <string name="bank_num_hint">输入银行卡号</string>
    <string name="bank_shu_hint">储蓄卡所属银行</string>
    <string name="tx_address">提现地址</string>
    <string name="tip_bet_rate">投注额倍数：</string>
    <string name="low_ti">最低提款</string>
    <string name="trade_fei">交易费用</string>
    <string name="tx_number">数量</string>
    <string name="per_min">最小</string>
    <string name="per_25">25%</string>
    <string name="per_50">50%</string>
    <string name="per_75">75%</string>
    <string name="per_max">最大</string>
    <string name="per_all">全部</string>
    <string name="tx_tron">Tron地址</string>
    <string name="id_order">订单号</string>
    <string name="sk_account">收款账号</string>
    <string name="add_bank_confirm">确认添加</string>
    <string name="cz_bank">银行卡充值</string>
    <string name="cz_ali">支付宝充值</string>
    <string name="cz_money">充值金额</string>
    <string name="dz_wallet">到账钱包</string>
    <string name="dz_bank">到账银行卡</string>
    <string name="tx_money">提现金额</string>
    <string name="tx_time">提现时间</string>
    <string name="tx_yue">预约提现</string>
    <string name="tx_normal">普通提现</string>
    <string name="tip_order_status_suc">订单充值成功</string>
    <string name="tip_recharge_ing">充值订单进行中</string>
    <string name="tip_add_bank">使用此支付方式前，请先添加提现银行卡</string>
    <string name="tx_yue_tip">0-24小时到账 加送0.1%-0.6%</string>
    <string name="tx_normal_tip">0-2小时到账 无加送</string>
    <string name="cz_wechat">微信充值</string>
    <string name="cz_yun">云闪付充值</string>
    <string name="cz_ee">EE钱包充值</string>
    <string name="cz_rmb">数字人民币充值</string>
    <string name="tip_del_address">确认删除地址?</string>

    <string name="cz_method">充值方式</string>
    <string name="tx_method">提现方式</string>
    <string name="tx_union">银行卡提现</string>
    <string name="tx_usdt">USDT提现</string>
    <string name="tx_trc">TRC-20</string>
    <string name="tx_ee">EE钱包</string>
    <string name="cz_suc">支付成功</string>
    <string name="cz_fad">支付失败</string>
    <string name="cz_shen">支付审核中</string>
    <string name="tx_suc">提现成功</string>
    <string name="tx_fad">提现失败</string>
    <string name="tx_shen">提现审核中</string>

    <string name="tx_rmb">数字人民币</string>
    <string name="tx_wechat">微信</string>
    <string name="tx_yun">云闪付</string>
    <string name="tx_ali">支付宝</string>
    <string name="tx_sk_bank">银行卡</string>
    <string name="tx_sb_reason">失败原因</string>

    <string name="fragment_topup_detail_title">充值详情</string>
    <string name="recharge_list_empty">暂无充值记录</string>
    <string name="recharge_info_empty">暂无充值信息</string>
    <string name="copied_to_clipboard">复制成功</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_failure">支付失败</string>
    <string name="pay_un_confirm">支付确定中</string>
    <string name="order_number">订单号</string>
    <string name="payment_method">支付方式</string>
    <string name="payment_status">交易状态</string>
    <string name="transaction_create_time">创建时间</string>

    <string name="tip_empty_address">地址不能为空</string>
    <string name="tip_empty_input">金额不能为空</string>
    <string name="tip_hint_money">输入金额 $100-2000</string>
    <string name="date_picker_year">%d年</string>
    <string name="date_picker_month">%d月</string>
    <string name="date_picker_day">%d日</string>
    <string name="date_picker_date_before">%s及以前</string>
    <string name="recharge_picker_title">选择充值类型</string>
    <string name="date_picker_title">选择开始日期</string>
    <string name="date_picker_all">全部</string>
    <string name="date_picker_today">今天</string>
    <string name="date_picker_yesterday">昨天</string>
    <string name="date_picker_in_7_day">7天内</string>
    <string name="date_picker_custom">自定义</string>
</resources>