<?xml version="1.0" encoding="utf-8"?>
<arch.cayenne.lib.skin.widget.SkinnableConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_shape_del_dialog"
    app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/title_bar">

        <arch.cayenne.lib.skin.widget.SkinnableTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bank_del_tip"
            android:textColor="@color/bank_title"
            android:textSize="@dimen/sp_14"
            android:layout_marginTop="@dimen/dp_25"/>

        <arch.cayenne.lib.skin.widget.SkinnableTextView
            android:id="@+id/tv_bank_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/bank_title"
            android:textSize="@dimen/sp_14"
            android:layout_marginTop="@dimen/dp_19"
            android:layout_marginBottom="@dimen/dp_26"/>

        <arch.cayenne.lib.skin.widget.SkinnableView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/bank_line" />

        <arch.cayenne.lib.skin.widget.SkinnableTextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:gravity="center"
            android:text="@string/bank_del"
            android:textColor="@color/pay_failure"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold" />

        <arch.cayenne.lib.skin.widget.SkinnableView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_8"
            android:background="@color/bank_line" />

        <arch.cayenne.lib.skin.widget.SkinnableTextView
            android:id="@+id/tv_close"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:gravity="center"
            android:text="@string/bank_cancel"
            android:textColor="@color/bank_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />
    </LinearLayout>
</arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>