<?xml version="1.0" encoding="utf-8"?>
<arch.cayenne.lib.common.ui.view.InterceptedLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    app:interceptedDirection="RIGHT">

    <arch.cayenne.lib.common.ui.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_bg"
        app:layout_constraintTop_toBottomOf="@+id/title_bar">

        <arch.cayenne.lib.skin.widget.SkinnableLinearLayout
            android:id="@+id/lay_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_14"
            android:background="@drawable/bg_bank_card_info"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginStart="@dimen/dp_16"
                android:gravity="center_vertical"
                android:text="@string/add_bank_tip"
                android:textColor="@color/add_bank_tip"
                android:textSize="@dimen/sp_12" />

            <arch.cayenne.lib.skin.widget.SkinnableView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/view_line" />

            <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60">

                <arch.cayenne.lib.skin.widget.SkinnableTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:text="@string/bank_name"
                    android:textColor="@color/bank_text"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <arch.cayenne.lib.skin.widget.SkinnableEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_100"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:hint="@string/bank_hint"
                    android:textColor="@color/bank_text"
                    android:textColorHint="@color/bank_title"
                    android:textSize="@dimen/sp_13"
                    android:background="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>

            <arch.cayenne.lib.skin.widget.SkinnableView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_100"
                android:background="@color/view_line" />

            <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_marginTop="@dimen/dp_14">

                <arch.cayenne.lib.skin.widget.SkinnableTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:text="@string/bank_number"
                    android:textColor="@color/bank_text"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <arch.cayenne.lib.skin.widget.SkinnableEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_100"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:hint="@string/bank_num_hint"
                    android:textColor="@color/bank_text"
                    android:textColorHint="@color/bank_title"
                    android:textSize="@dimen/sp_13"
                    android:background="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>

            <arch.cayenne.lib.skin.widget.SkinnableView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_100"
                android:background="@color/view_line" />

            <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60">

                <arch.cayenne.lib.skin.widget.SkinnableTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:text="@string/bank_shu"
                    android:textColor="@color/bank_text"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <arch.cayenne.lib.skin.widget.SkinnableEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_100"
                    android:layout_marginEnd="@dimen/dp_30"
                    android:hint="@string/bank_shu_hint"
                    android:textColor="@color/bank_text"
                    android:textColorHint="@color/bank_title"
                    android:textSize="@dimen/sp_13"
                    android:background="@null"
                    android:editable="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="Deprecated" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp_8"
                    android:layout_height="@dimen/dp_12"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_18"
                    android:background="@drawable/icon_bank_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>
        </arch.cayenne.lib.skin.widget.SkinnableLinearLayout>

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:id="@+id/lay_add_bank"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginHorizontal="@dimen/dp_14"
            android:layout_marginTop="@dimen/dp_32"
            android:background="@drawable/selector_add_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lay_info">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <arch.cayenne.lib.skin.widget.SkinnableImageView
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:background="@drawable/icon_add_bank" />

                <arch.cayenne.lib.skin.widget.SkinnableTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:text="@string/add_bank_confirm"
                    android:textColor="@color/bank_text"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>
    </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>
</arch.cayenne.lib.common.ui.view.InterceptedLinearLayout>