<?xml version="1.0" encoding="utf-8"?>
<arch.cayenne.lib.skin.widget.SkinnableConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_fragment">

    <arch.cayenne.lib.skin.widget.SkinnableTextView
        android:id="@+id/tv_tournament_section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/add_to_note"
        android:textColor="@color/bank_text"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <arch.cayenne.lib.skin.widget.SkinnableImageView
        android:id="@+id/iv_close"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_14"
        android:src="@drawable/icon_bottom_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <arch.cayenne.lib.skin.widget.SkinnableLinearLayout
        android:id="@+id/lay_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_412"
        android:layout_marginHorizontal="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_55"
        android:background="@drawable/bg_bank_card_info"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <arch.cayenne.lib.skin.widget.SkinnableTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/coin_type"
            android:textColor="@color/bank_title"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_54"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/bg_recharge_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_coin"
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_15"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_pay_usdt" />

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:id="@+id/tv_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_9"
                android:text="USDT"
                android:textColor="@color/bank_text"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_coin"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_arrow"
                android:layout_width="@dimen/dp_12"
                android:layout_height="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_12"
                android:stateListAnimator="@animator/layout_alpha_animator"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_arrow_down" />
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>

        <arch.cayenne.lib.skin.widget.SkinnableTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_19"
            android:text="@string/cz_network"
            android:textColor="@color/bank_title"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_54"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_9"
            android:background="@drawable/bg_recharge_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:id="@+id/tv_network_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:text="Tron (TRC20)"
                android:textColor="@color/bank_text"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_arrow_net"
                android:layout_width="@dimen/dp_12"
                android:layout_height="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_12"
                android:stateListAnimator="@animator/layout_alpha_animator"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_arrow_down" />
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>

        <arch.cayenne.lib.skin.widget.SkinnableTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/tv_address"
            android:textColor="@color/bank_title"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_54"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/bg_recharge_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <arch.cayenne.lib.skin.widget.SkinnableEditText
                android:id="@+id/edt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_20"
                android:background="@null"
                android:text="TPAgKfYzRdK83Qocc4gXvEVu4jPKfeuer5"
                android:textColor="@color/bank_text"
                android:textColorHint="@color/bank_title"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>

        <arch.cayenne.lib.skin.widget.SkinnableTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/remark"
            android:textColor="@color/bank_title"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_54"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_9"
            android:background="@drawable/bg_recharge_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <arch.cayenne.lib.skin.widget.SkinnableEditText
                android:id="@+id/edt_remark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_14"
                android:layout_marginEnd="@dimen/dp_20"
                android:background="@null"
                android:hint="@string/mark_hint"
                android:textColor="@color/bank_text"
                android:textColorHint="@color/bank_title"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>
    </arch.cayenne.lib.skin.widget.SkinnableLinearLayout>

    <arch.cayenne.lib.skin.widget.SkinnableButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_78"
        android:background="@drawable/selector_add_card"
        android:gravity="center"
        android:text="@string/save_addr"
        android:textColor="@color/bank_text"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <arch.cayenne.lib.common.ui.view.DynamicStateLayout
        android:id="@+id/cl_dynamics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_search_bar" />
</arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>